feat: dockerizing project, add postgresql and identity

--- a/Auth/MicroShoppingService.Auth.API/appsettings.json
+++ b/Auth/MicroShoppingService.Auth.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=authdb;User Id=postgres;Password=password123;"
+  }
 }
